# rlottie

./: CMakeLists.txt  meson.build  sonar-project.properties
src/lottie/: lottieanimation.cpp  lottiefiltermodel.h  lottiemodel.h  lottieparser.cpp
src/vector/: vdebug.cpp
test/: CMakeLists.txt  meson.build  test_lottiefiltermodel.cpp  test_lottiemodel.cpp
